--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -37,6 +37,11 @@
         <attr name="size_info" format="dimension"/>
         <attr name="size_text_date_grouping" format="dimension"/>
 
+        <attr name="margin_start_media_file" format="dimension"/>
+        <attr name="margin_end_media_file" format="dimension"/>
+        <attr name="margin_top_media_file" format="dimension"/>
+        <attr name="margin_bottom_media_file" format="dimension"/>
+
         <attr name="company_name" format="string"/>
         <attr name="show_company_name" format="boolean"/>
         <attr name="show_internet_connection_state" format="boolean"/>
