--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -47,6 +47,7 @@
         <attr name="show_company_name" format="boolean"/>
         <attr name="show_internet_connection_state" format="boolean"/>
         <attr name="show_upper_limiter" format="boolean"/>
+        <attr name="show_starting_progress" format="boolean"/>
         
     </declare-styleable>
 
