Added the ability to set the arrangement of elements relative to each other

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -37,13 +37,14 @@
         android:layout_width="match_parent"
         app:color_main="@color/color_main"
         app:color_bg_user_message="@color/color_main"
-        app:color_text_server_action="@color/color_main"
+        app:color_text_operator_action="@color/color_main"
         app:color_text_user_message="#fff"
         app:progressIndeterminateDrawable="@drawable/spinner"
         app:show_internet_connection_state="false"
         app:show_upper_limiter="false"
         app:auth="AUTH_WITHOUT_FORM"
         app:timeDelayed="1000"
+        app:layout_item_user_text_message="@layout/layout_item_user_text_message"
         app:urlSocketHost="@string/urlSocketHost"
         app:urlSocketNameSpace="@string/urlSocketNameSpace"
         app:urlUploadHost="@string/urlUploadHost"
