--- a/chat/src/main/res/layout/bottom_sheet_file_viewer.xml
+++ b/chat/src/main/res/layout/bottom_sheet_file_viewer.xml
@@ -5,6 +5,5 @@
     android:id="@+id/list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    />
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
