--- a/chat/src/main/res/layout/bottom_sheet_file_viewer_item.xml
+++ b/chat/src/main/res/layout/bottom_sheet_file_viewer_item.xml
@@ -13,8 +13,7 @@
         android:layout_height="24dp"
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="16dp"
-        android:contentDescription="@null"
-        />
+        android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/description"
@@ -23,7 +22,6 @@
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
-        android:textSize="16sp"
-        />
+        android:textSize="16sp" />
 
 </LinearLayout>
