--- a/chat/src/main/res/layout/item_action.xml
+++ b/chat/src/main/res/layout/item_action.xml
@@ -15,7 +15,6 @@
         android:paddingTop="12dp"
         android:paddingBottom="14dp"
         android:fontFamily="@font/ubuntu_medium"
-        android:textFontWeight="600"
-        />
+        android:textFontWeight="600" />
 
 </LinearLayout>
