--- a/chat/src/main/res/layout/item_server_text_message.xml
+++ b/chat/src/main/res/layout/item_server_text_message.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
@@ -11,23 +10,32 @@
     android:layout_marginEnd="20dp">
 
     <include
+        android:id="@+id/include_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/item_date_message" />
 
-    <TextView
-        android:id="@+id/server_message"
+    <FrameLayout
+        android:id="@+id/content_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="start"
-        android:layout_gravity="start"
-        android:paddingStart="15dp"
-        android:paddingTop="13dp"
-        android:paddingEnd="13dp"
-        android:paddingBottom="13dp"
         android:background="@drawable/background_item_simple_server_message"
-        android:fontFamily="@font/ubuntu_light"
-        android:textFontWeight="300" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include_date">
+
+        <TextView
+            android:id="@+id/server_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start"
+            android:paddingStart="15dp"
+            android:paddingTop="13dp"
+            android:paddingEnd="13dp"
+            android:paddingBottom="13dp"
+            android:fontFamily="@font/ubuntu_light"
+            android:textFontWeight="300" />
+
+    </FrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/actions_list"
@@ -35,17 +43,31 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:nestedScrollingEnabled="true"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/content_container" />
+
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textFontWeight="600"
+        android:drawablePadding="4dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/actions_list" />
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
         android:gravity="center_vertical"
-        android:layout_marginTop="10dp"
-        android:drawablePadding="8dp"
         android:fontFamily="@font/ubuntu_regular"
-        android:textFontWeight="600" />
+        android:textFontWeight="600"
+        android:layout_marginStart="4dp"
+        app:layout_constraintStart_toEndOf="@id/author"
+        app:layout_constraintTop_toTopOf="@id/author"
+        app:layout_constraintBottom_toBottomOf="@id/author" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
