--- a/chat/src/main/res/layout/item_server_union_message.xml
+++ b/chat/src/main/res/layout/item_server_union_message.xml
@@ -5,17 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp">
 
         <include
+            android:id="@+id/include_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/item_date_message" />
@@ -25,12 +25,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="start"
             android:background="@drawable/background_item_simple_server_message"
             android:paddingStart="15dp"
             android:paddingTop="13dp"
             android:paddingEnd="13dp"
-            android:paddingBottom="13dp">
+            android:paddingBottom="13dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/include_date">
 
             <TextView
                 android:id="@+id/server_message"
@@ -74,15 +75,29 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:fontFamily="@font/ubuntu_regular"
+            android:textFontWeight="600"
+            android:drawablePadding="4dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/content_container" />
+
+        <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
             android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:drawablePadding="8dp"
             android:fontFamily="@font/ubuntu_regular"
-            android:textFontWeight="600" />
+            android:textFontWeight="600"
+            android:layout_marginStart="4dp"
+            app:layout_constraintStart_toEndOf="@id/author"
+            app:layout_constraintTop_toTopOf="@id/author"
+            app:layout_constraintBottom_toBottomOf="@id/author" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
