--- a/chat/src/main/res/layout/item_user_image_message.xml
+++ b/chat/src/main/res/layout/item_user_image_message.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp">
 
         <include
+            android:id="@+id/include_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/item_date_message" />
 
-        <LinearLayout
-            android:id="@+id/user_image_container"
+        <FrameLayout
+            android:id="@+id/content_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/background_item_simple_user_message"
-            android:layout_gravity="end">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/include_date">
 
             <ImageView
                 android:id="@+id/user_image"
@@ -32,18 +34,41 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone" />
 
-        </LinearLayout>
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:fontFamily="@font/ubuntu_regular"
+            android:textFontWeight="600"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@id/time"
+            app:layout_constraintTop_toTopOf="@id/time"
+            app:layout_constraintBottom_toBottomOf="@id/time" />
 
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:drawablePadding="8dp"
             android:fontFamily="@font/ubuntu_regular"
-            android:textFontWeight="600" />
+            android:textFontWeight="600"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="4dp"
+            app:layout_goneMarginEnd="0dp"
+            app:layout_constraintTop_toBottomOf="@id/content_container"
+            app:layout_constraintEnd_toStartOf="@id/status" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/status"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/time"
+            app:layout_constraintBottom_toBottomOf="@id/time" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
