--- a/chat/src/main/res/layout/item_user_text_message.xml
+++ b/chat/src/main/res/layout/item_user_text_message.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
@@ -10,33 +10,64 @@
     android:layout_marginEnd="20dp">
 
     <include
+        android:id="@+id/include_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/item_date_message" />
 
-    <TextView
-        android:id="@+id/user_message"
+    <FrameLayout
+        android:id="@+id/content_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="end"
-        android:layout_gravity="end"
-        android:paddingStart="15dp"
-        android:paddingTop="13dp"
-        android:paddingEnd="13dp"
-        android:paddingBottom="13dp"
         android:background="@drawable/background_item_simple_user_message"
-        android:fontFamily="@font/ubuntu_light"
-        android:textFontWeight="300" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/include_date">
+
+        <TextView
+            android:id="@+id/user_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:paddingStart="15dp"
+            android:paddingTop="13dp"
+            android:paddingEnd="13dp"
+            android:paddingBottom="13dp"
+            android:fontFamily="@font/ubuntu_light"
+            android:textFontWeight="300" />
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:fontFamily="@font/ubuntu_regular"
+        android:textFontWeight="600"
+        android:layout_marginEnd="4dp"
+        app:layout_constraintEnd_toStartOf="@id/time"
+        app:layout_constraintTop_toTopOf="@id/time"
+        app:layout_constraintBottom_toBottomOf="@id/time" />
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
         android:gravity="center_vertical"
-        android:layout_marginTop="10dp"
-        android:drawablePadding="8dp"
         android:fontFamily="@font/ubuntu_regular"
-        android:textFontWeight="600" />
+        android:textFontWeight="600"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="4dp"
+        app:layout_goneMarginEnd="0dp"
+        app:layout_constraintTop_toBottomOf="@id/content_container"
+        app:layout_constraintEnd_toStartOf="@id/status" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/status"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/time"
+        app:layout_constraintBottom_toBottomOf="@id/time" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
