--- a/chat/src/main/res/layout/item_user_union_message.xml
+++ b/chat/src/main/res/layout/item_user_union_message.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp">
 
         <include
+            android:id="@+id/include_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/item_date_message" />
@@ -24,12 +25,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="end"
             android:background="@drawable/background_item_simple_user_message"
             android:paddingStart="15dp"
             android:paddingTop="13dp"
             android:paddingEnd="13dp"
-            android:paddingBottom="13dp">
+            android:paddingBottom="13dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/include_date">
 
             <TextView
                 android:id="@+id/user_message"
@@ -65,15 +67,38 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:fontFamily="@font/ubuntu_regular"
+            android:textFontWeight="600"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@id/time"
+            app:layout_constraintTop_toTopOf="@id/time"
+            app:layout_constraintBottom_toBottomOf="@id/time" />
+
+        <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
             android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:drawablePadding="8dp"
             android:fontFamily="@font/ubuntu_regular"
-            android:textFontWeight="600" />
+            android:textFontWeight="600"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="4dp"
+            app:layout_goneMarginEnd="0dp"
+            app:layout_constraintTop_toBottomOf="@id/content_container"
+            app:layout_constraintEnd_toStartOf="@id/status" />
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/status"
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/time"
+            app:layout_constraintBottom_toBottomOf="@id/time" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
