--- a/chat/src/main/res/layout/item_server_file_message.xml
+++ b/chat/src/main/res/layout/item_server_file_message.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
@@ -15,10 +16,15 @@
         android:layout_height="wrap_content"
         layout="@layout/item_date_message" />
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/content_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/background_item_simple_server_message"
+        android:paddingStart="15dp"
+        android:paddingTop="13dp"
+        android:paddingEnd="13dp"
+        android:paddingBottom="13dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/include_date">
 
@@ -26,10 +32,36 @@
             android:id="@+id/server_file"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_gravity="start"
-            android:src="@drawable/ic_file" />
+            android:src="@drawable/ic_file"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/server_file_name"
+            app:layout_constraintBottom_toBottomOf="@id/server_file_size" />
 
-    </FrameLayout>
+        <TextView
+            android:id="@+id/server_file_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxWidth="120dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:layout_marginStart="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/server_file"
+            tools:text="name.pdf" />
+
+        <TextView
+            android:id="@+id/server_file_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@id/server_file"
+            app:layout_constraintTop_toBottomOf="@id/server_file_name"
+            tools:text="750 Кб" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/author"
