--- a/chat/src/main/res/layout/item_server_union_message.xml
+++ b/chat/src/main/res/layout/item_server_union_message.xml
@@ -65,8 +65,8 @@
 
             <ImageView
                 android:id="@+id/server_file"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_file"
                 android:layout_gravity="start"
                 android:layout_marginTop="8dp"
