--- a/chat/src/main/res/layout/item_user_union_message.xml
+++ b/chat/src/main/res/layout/item_user_union_message.xml
@@ -57,8 +57,8 @@
 
             <ImageView
                 android:id="@+id/user_file"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/ic_file"
                 android:layout_gravity="end"
                 android:layout_marginTop="8dp"
