--- a/chat/src/main/res/layout/item_user_image_message.xml
+++ b/chat/src/main/res/layout/item_user_image_message.xml
@@ -31,8 +31,7 @@
             <ImageView
                 android:id="@+id/user_image"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone" />
+                android:layout_height="wrap_content" />
 
         </FrameLayout>
 
