Added masks to the phone

--- a/chat/src/main/res/layout/auth_layout.xml
+++ b/chat/src/main/res/layout/auth_layout.xml
@@ -51,7 +51,9 @@
         android:hint="@string/auth_user_phone"
         android:textSize="16sp"
         android:textColor="#000"
-        android:inputType="phone"
+        android:digits="1234567890+-() "
+        android:inputType="number"
+        android:imeOptions="actionDone"
         android:maxLines="1"
         android:background="@drawable/background_normal_field_auth_form"
         android:padding="8dp"
