--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -50,6 +50,15 @@
         <attr name="size_info" format="dimension"/>
         <attr name="size_text_date_grouping" format="dimension"/>
 
+        <attr name="width_item_user_text_message" format="dimension"/>
+        <attr name="width_item_operator_text_message" format="dimension"/>
+        <attr name="width_item_user_file_icon_message" format="dimension"/>
+        <attr name="width_item_operator_file_icon_message" format="dimension"/>
+        <attr name="width_elongated_item_user_file_preview_message" format="dimension"/>
+        <attr name="width_elongated_item_operator_file_preview_message" format="dimension"/>
+        <attr name="height_elongated_item_user_file_preview_message" format="dimension"/>
+        <attr name="height_elongated_item_operator_file_preview_message" format="dimension"/>
+
         <attr name="resource_font_family_all_text" format="integer"/>
         <attr name="resource_font_family_user_message" format="integer"/>
         <attr name="resource_font_family_operator_message" format="integer"/>
