--- a/chat/src/main/res/layout/item_server_text_message.xml
+++ b/chat/src/main/res/layout/item_server_text_message.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
@@ -45,17 +46,28 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/content_container" />
 
+    <ImageView
+        android:id="@+id/author_preview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/actions_list"
+        tools:src="@drawable/ic_operator" />
+
     <TextView
         android:id="@+id/author"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:fontFamily="@font/ubuntu_regular"
         android:textFontWeight="600"
-        android:drawablePadding="4dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/actions_list" />
+        android:gravity="center_vertical"
+        android:layout_marginStart="4dp"
+        app:layout_goneMarginStart="0dp"
+        app:layout_constraintStart_toEndOf="@id/author_preview"
+        app:layout_constraintTop_toTopOf="@+id/author_preview"
+        app:layout_constraintBottom_toBottomOf="@+id/author_preview"
+        tools:text="Бот" />
 
     <TextView
         android:id="@+id/time"
