--- a/chat/src/main/res/values/dimens.xml
+++ b/chat/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="default_size_server_message">14sp</dimen>
     <dimen name="default_size_server_action">14sp</dimen>
     <dimen name="default_size_author">12sp</dimen>
+    <dimen name="default_size_author_preview">24dp</dimen>
     <dimen name="default_size_time">12sp</dimen>
     <dimen name="default_size_warning">18sp</dimen>
     <dimen name="default_size_info">12sp</dimen>
