--- a/chat/src/main/res/values/colors.xml
+++ b/chat/src/main/res/values/colors.xml
@@ -19,6 +19,9 @@
 
     <color name="white">#fff</color>
     <color name="gray">#ddd</color>
+    <color name="gray_f5f5f5">#f5f5f5</color>
+    <color name="gray_8d8d8d">#8d8d8d</color>
+    <color name="gray_707070">#707070</color>
     <color name="black">#000</color>
     <color name="black_translucent">#7F000000</color>
     <color name="error">#ef5350</color>
