--- a/chat/src/main/res/values/dimens.xml
+++ b/chat/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="default_size_time">12sp</dimen>
     <dimen name="default_size_warning">18sp</dimen>
     <dimen name="default_size_info">12sp</dimen>
+    <dimen name="default_size_feedback_title">16sp</dimen>
 
     <dimen name="default_margin_start_media_file">14dp</dimen>
     <dimen name="default_margin_end_media_file">12dp</dimen>
