--- a/chat/src/main/res/values/attrs.xml
+++ b/chat/src/main/res/values/attrs.xml
@@ -125,6 +125,7 @@
         <attr name="layout_item_operator_gif_message" format="reference"/>
         <attr name="layout_item_operator_file_message" format="reference"/>
         <attr name="layout_item_operator_union_message" format="reference"/>
+        <attr name="layout_item_transfer_message" format="reference"/>
 
         <!--feedback-->
         <attr name="delay_feedback_screen_appears" format="integer"/>
