--- a/chat/src/main/res/values/dimens.xml
+++ b/chat/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="default_size_author_preview">24dp</dimen>
     <dimen name="default_size_time">12sp</dimen>
     <dimen name="default_size_warning">18sp</dimen>
+    <dimen name="default_size_download">14sp</dimen>
     <dimen name="default_size_info">12sp</dimen>
     <dimen name="default_size_feedback_title">16sp</dimen>
 
