--- a/chat/src/main/res/layout/item_server_union_message.xml
+++ b/chat/src/main/res/layout/item_server_union_message.xml
@@ -67,6 +67,17 @@
             android:layout_marginTop="8dp"
             android:visibility="gone" />
 
+        <TextView
+            android:id="@+id/download_file"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/download"
+            android:gravity="center"
+            android:padding="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone" />
+
         <LinearLayout
             android:id="@+id/server_media_warning"
             android:layout_width="0dp"
